<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTask"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="Enter task"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
            android:lines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/materialCardView">

        <RadioButton
            android:id="@+id/rdPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending" />

        <RadioButton
            android:id="@+id/rdDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />
    </RadioGroup>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#eeeeee"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTask">

        <ImageView
            android:id="@+id/imgTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_image_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/opaque"
            android:drawableTop="@drawable/ic_camera"
            android:gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/white" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/lblNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notify:"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/lblNotify"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>